--- a/cmd/zdb/Makefile.am
+++ b/cmd/zdb/Makefile.am
@@ -17,4 +17,11 @@ zdb_SOURCES = \
 	${top_srcdir}/cmd/zdb/zdb_il.c
 
 zdb_LDADD = \
-	$(top_builddir)/lib/libspl/libspl.la
+	$(top_builddir)/lib/libspl/libspl.la \
+	$(top_builddir)/lib/libavl/libavl.la \
+	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libuutil/libuutil.la \
+	$(top_builddir)/lib/libzpool/libzpool.la \
+	$(top_builddir)/lib/libzfs/libzfs.la
+
+zdb_LDFLAGS =
