--- a/cmd/zdb/Makefile.in
+++ b/cmd/zdb/Makefile.in
@@ -60,7 +60,12 @@ sbinPROGRAMS_INSTALL = $(INSTALL_PROGRAM)
 PROGRAMS = $(sbin_PROGRAMS)
 am_zdb_OBJECTS = zdb.$(OBJEXT) zdb_il.$(OBJEXT)
 zdb_OBJECTS = $(am_zdb_OBJECTS)
-zdb_DEPENDENCIES = $(top_builddir)/lib/libspl/libspl.la
+zdb_DEPENDENCIES = $(top_builddir)/lib/libspl/libspl.la \
+	$(top_builddir)/lib/libavl/libavl.la \
+	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libuutil/libuutil.la \
+	$(top_builddir)/lib/libzpool/libzpool.la \
+	$(top_builddir)/lib/libzfs/libzfs.la
 depcomp = $(SHELL) $(top_srcdir)/config/depcomp
 am__depfiles_maybe = depfiles
 COMPILE = $(CC) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) $(AM_CPPFLAGS) \
@@ -232,8 +237,14 @@ zdb_SOURCES = \
 	${top_srcdir}/cmd/zdb/zdb_il.c
 
 zdb_LDADD = \
-	$(top_builddir)/lib/libspl/libspl.la
+	$(top_builddir)/lib/libspl/libspl.la \
+	$(top_builddir)/lib/libavl/libavl.la \
+	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libuutil/libuutil.la \
+	$(top_builddir)/lib/libzpool/libzpool.la \
+	$(top_builddir)/lib/libzfs/libzfs.la
 
+zdb_LDFLAGS = 
 all: all-am
 
 .SUFFIXES:
