Add linker flags

--- a/cmd/zdb/Makefile.am
+++ b/cmd/zdb/Makefile.am
@@ -24,4 +24,4 @@ zdb_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
 
-zdb_LDFLAGS =
+zdb_LDFLAGS = -pthread -lm -lz -lrt
