--- a/cmd/zdb/Makefile.in
+++ b/cmd/zdb/Makefile.in
@@ -244,7 +244,7 @@ zdb_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
 
-zdb_LDFLAGS = 
+zdb_LDFLAGS = -pthread -lm -lz -lrt
 all: all-am
 
 .SUFFIXES:
