--- a/module/zfs/Makefile.in
+++ b/module/zfs/Makefile.in
@@ -62,6 +62,7 @@ ${MODULE}-objs += spa_boot.o	# Bootable root partitions
 ${MODULE}-objs += zfs_fm.o	# Post reports of FMA consumption support
 ${MODULE}-objs += zfs_byteswap.c # XXX: ?
 ${MODULE}-objs += zfs_fuid.c	# XXX: ?
+${MODULE}-objs += zfs_znode.c	# XXX: ?
 
 # ZIO (ZFS I/O Pipeline)
 ${MODULE}-objs += zio.o		# Interfaces zio core
