--- a/cmd/zdump/Makefile.am
+++ b/cmd/zdump/Makefile.am
@@ -1,7 +1,14 @@
 include $(top_srcdir)/config/Rules.am
 
 DEFAULT_INCLUDES += \
-	-I${top_srcdir}/lib/libspl/include
+	-I${top_srcdir}/lib/libspl/include \
+	-I${top_srcdir}/lib/libzpool/include \
+	-I${top_srcdir}/lib/libnvpair/include \
+	-I${top_srcdir}/lib/libzfs/include \
+	-I${top_srcdir}/module/zfs/include \
+	-I${top_srcdir}/module/zcommon/include \
+	-I${top_srcdir}/module/nvpair/include \
+	-I${top_srcdir}/module/avl/include
 
 sbin_PROGRAMS = zdump
 
@@ -9,4 +16,11 @@ zdump_SOURCES = \
 	${top_srcdir}/cmd/zdump/zdump.c
 
 zdump_LDADD = \
-	$(top_builddir)/lib/libspl/libspl.la
+	$(top_builddir)/lib/libspl/libspl.la \
+	$(top_builddir)/lib/libavl/libavl.la \
+	$(top_builddir)/lib/libnvpair/libnvpair.la \
+	$(top_builddir)/lib/libuutil/libuutil.la \
+	$(top_builddir)/lib/libzpool/libzpool.la \
+	$(top_builddir)/lib/libzfs/libzfs.la
+
+zdb_LDFLAGS = -pthread -lm -lz -lrt
