--- a/cmd/zdump/Makefile.am
+++ b/cmd/zdump/Makefile.am
@@ -23,4 +23,4 @@ zdump_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
 
-zdb_LDFLAGS = -pthread -lm -lz -lrt
+zdump_LDFLAGS = -pthread -lm -lz -lrt
