--- a/cmd/zinject/Makefile.am
+++ b/cmd/zinject/Makefile.am
@@ -2,6 +2,7 @@ include $(top_srcdir)/config/Rules.am
 
 DEFAULT_INCLUDES += \
 	-I${top_srcdir}/lib/libspl/include \
+	-I${top_srcdir}/lib/libzpool/include \
 	-I${top_srcdir}/lib/libuutil/include \
 	-I${top_srcdir}/lib/libzfs/include \
 	-I${top_srcdir}/lib/libnvpair/include \
