Add more missing include paths

--- a/cmd/zinject/Makefile.am
+++ b/cmd/zinject/Makefile.am
@@ -6,6 +6,8 @@ DEFAULT_INCLUDES += \
 	-I${top_srcdir}/lib/libuutil/include \
 	-I${top_srcdir}/lib/libzfs/include \
 	-I${top_srcdir}/lib/libnvpair/include \
+	-I${top_srcdir}/module/zfs \
+	-I${top_srcdir}/module/zfs/include \
 	-I${top_srcdir}/module/zcommon/include \
 	-I${top_srcdir}/module/nvpair/include \
 	-I${top_srcdir}/module/avl/include
