--- a/cmd/ztest/Makefile.am
+++ b/cmd/ztest/Makefile.am
@@ -25,4 +25,4 @@ ztest_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
 
-ztest_LDFLAGS = -pthread -lm -lz -lrt
+ztest_LDFLAGS = -pthread -lm -lz -lrt -ldl
