Refresh autogen products

--- a/cmd/ztest/Makefile.in
+++ b/cmd/ztest/Makefile.in
@@ -244,7 +244,7 @@ ztest_LDADD = \
 	$(top_builddir)/lib/libzpool/libzpool.la \
 	$(top_builddir)/lib/libzfs/libzfs.la
 
-ztest_LDFLAGS = -pthread -lm -lz -lrt
+ztest_LDFLAGS = -pthread -lm -lz -lrt -ldl
 all: all-am
 
 .SUFFIXES:
