Minor zpios cleanup

--- a/cmd/zpios/Makefile.am
+++ b/cmd/zpios/Makefile.am
@@ -1,5 +1,11 @@
 include $(top_srcdir)/config/Rules.am
 
+DEFAULT_INCLUDES += \
+	-I${top_srcdir}/module/zpios/include \
+	-I${top_srcdir}/module/zfs \
+	-I${top_srcdir}/module/zfs/include \
+	-I${top_srcdir}/module/zcommon/include
+
 sbin_PROGRAMS = zpios
 
 zpios_SOURCES = \
