Minimal include set

--- a/cmd/zpios/Makefile.am
+++ b/cmd/zpios/Makefile.am
@@ -1,14 +1,12 @@
 include $(top_srcdir)/config/Rules.am
 
 DEFAULT_INCLUDES += \
-	-I${top_srcdir}/module/zpios/include \
-	-I${top_srcdir}/module/zfs \
-	-I${top_srcdir}/module/zfs/include \
-	-I${top_srcdir}/module/zcommon/include
+	-I${top_srcdir}/module/zpios/include
 
 sbin_PROGRAMS = zpios
 
 zpios_SOURCES = \
-	$(top_srcdir)/cmd/zpios/zpios.h \
 	$(top_srcdir)/cmd/zpios/zpios_main.c \
-	$(top_srcdir)/cmd/zpios/zpios_util.c
+	$(top_srcdir)/cmd/zpios/zpios_util.c \
+	$(top_srcdir)/cmd/zpios/zpios.h
+
