--- a/cmd/zpios/Makefile.in
+++ b/cmd/zpios/Makefile.in
@@ -206,9 +206,7 @@ target_cpu = @target_cpu@
 target_os = @target_os@
 target_vendor = @target_vendor@
 DEFAULT_INCLUDES = -I${top_srcdir} \
-	-I${top_srcdir}/module/zpios/include \
-	-I${top_srcdir}/module/zfs -I${top_srcdir}/module/zfs/include \
-	-I${top_srcdir}/module/zcommon/include
+	-I${top_srcdir}/module/zpios/include
 
 # FIXME: Quiet warnings not covered by the gcc-* patches.  We should
 # FIXME: consider removing this as soon as we reasonably can.
@@ -224,9 +222,9 @@ AM_CFLAGS = -Wall -Wstrict-prototypes -Werror -Wno-switch -Wno-unused \
 	-D_FILE_OFFSET_BITS=64 -D_LARGEFILE64_SOURCE \
 	-DTEXT_DOMAIN=\"zfs-linux-user\"
 zpios_SOURCES = \
-	$(top_srcdir)/cmd/zpios/zpios.h \
 	$(top_srcdir)/cmd/zpios/zpios_main.c \
-	$(top_srcdir)/cmd/zpios/zpios_util.c
+	$(top_srcdir)/cmd/zpios/zpios_util.c \
+	$(top_srcdir)/cmd/zpios/zpios.h
 
 all: all-am
 
